changes: the footer to the bottom, removed personal details from the header area, bacause it looked to busy, will be placed to cantact.html reduced the gap between header and contact me h2, made fixed charts, looks better when scroling down the work history. redused text of motivation attitude etc

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -2,9 +2,11 @@
 
 body {
     background-color:#fffff7;
+   
 }
 html, body { 
 overflow-x: hidden; 
+
 }
 .fix-gap {
     padding:0;
@@ -55,11 +57,12 @@ nav li a:hover {
     height:2px;
 }
 /*--------------------------------- Header */
+
 .header-left {
 min-height:250px;
 background:#2b78e4;
 }
-.header-left .name {
+.name {
 padding:0;
 color:#fffff7;
 font-family: 'Promt',sans-serif;
@@ -70,23 +73,23 @@ text-shadow:1px 1px #333333;
 
 
 }
-.header-left .value {
+.value {
     color:#fff;
     font-family: 'Comfortaa',sans-serif;
     font-weight:400;
     margin-left:30px;
     margin-top:20px;
     text-shadow:1px 1px #333333;
-    z-index:1;
+   
 }
-.header-left .personal-info{
+
+.header-left .personal-info {
     color:#fff;
     font-family: 'verdana',sans-serif;
-    text-align:right;
-    display:inline-block;
-    float:right;
     text-shadow:1px 1px #333333;
-    z-index:1;
+    margin-left:30px;
+    font-size:0.9em;
+    margin-top:20px;
 }
 .header-right {
      background-color:#333333;
@@ -129,6 +132,10 @@ text-shadow:1px 1px #333333;
     margin-top:0px;
 }
 /*--------------------------------- Main Section*/
+.main-section{
+    padding: 20px 20px;
+   
+}
 .main-content-h2 {
    font-size:32px;
    font-family: "Promt", sans-serif;
@@ -138,6 +145,7 @@ text-shadow:1px 1px #333333;
    text-transform: capitalize;
    margin-bottom: 0px;
    margin-top:2px;
+   width:200px;
 }
 .main-section-left {
  padding-left:30px;
@@ -170,6 +178,8 @@ text-shadow:1px 1px #333333;
 .main-section-right {
     padding-left:30px;
     display:block;
+ 
+    
 }
 .icon-star-color {
     font-size:28px;
@@ -181,14 +191,12 @@ text-shadow:1px 1px #333333;
     padding-right:0;
 } 
 /*--------------------------------- Footer */
-footer {
-    min-height:100px;
-    background-color:#333333;
-   }
+
 footer {
  min-height:100px;
- margin-top:5px;
+background-color:#333333;
 }
+
 footer .social-links {
    padding:0;
 }
@@ -295,6 +303,9 @@ height:59px;
 
 .main-section-right-adjust li {
     list-style: none;
+}
+section .row .main-section-right-adjust div h2{
+    font-size:1.5em;
 }
 .diagram {
     position: relative;
@@ -405,18 +416,19 @@ margin-left:-50px;
 top:10px;
 }
 
-/*--------------------------------- Contact me */
+/*--------------------------------- Contact.html */
 
 .contact-form {
     width:80%;
     margin:0 auto;
 }
 .main-content-h2-contant-me {
-    margin-top:30px;
+   
     color:#437ccb;
     text-align: center;
+    text-transform:capitalize;
 }
-/*--------------------------------- Portfolio */
+/*--------------------------------- Portfolio.html */
 .portfolio {
     text-align:center;
 }
@@ -427,7 +439,7 @@ top:10px;
 
 @media(max-width: 768px) {
     .main-section-right{
-    padding:30px;
+   /* padding:30px;*/
 }
     .aligning ul {
         margin:0 auto;
@@ -442,11 +454,27 @@ top:10px;
     .main-section-right div {
       display: inline-block;
     /* width: 200px;*/
+   
 
     }
     .main-section-right i {
         display:inline-block;
     }
+    .skills-diagram {
+    position:fixed;
+    right:0;
+    }   
+   .main-section {
+    padding-bottom:150px;
+   }
+   
+}
+
+@media (min-width:576px) {
+    footer {
+       position:fixed;
+        bottom:0;
+   }
 }
 
 @media(max-width: 992px) {
